<resources>
    <string name="app_name" translatable="false">IWMY Speed Dating</string>
    <string name="app_title" translatable="false">Speed Dating</string>
    <string name="toolbar_authorization">Authorization</string>
    <string name="toolbar_registering">Registering</string>
    <string name="toolbar_events">Events</string>
    <string name="toolbar_my_events">My Events</string>
    <string name="toolbar_organizer">Organizer</string>
    <string name="toolbar_participant_list">Participant list</string>
    <string name="toolbar_new_participant">New participant</string>
    <string name="toolbar_editing_user">Editing</string>
    <string name="toolbar_editing_event">Editing event</string>
    <string name="toolbar_name_and_surname">Name, surname</string>
    <string name="toolbar_questionnaires">Questionnaires, 0/0</string>
    <string name="toolbar_questionnaires_empty">Questionnaires, </string>
    <string name="toolbar_calculating">Calculating</string>
    <string name="toolbar_questionnaire">Questionnaire</string>
    <string name="toolbar_user">User</string>
    <string name="toolbar_couple_list">Couples list</string>
    <string name="toolbar_couple">Couple</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_new_event">New event</string>
    <string name="toolbar_your_couple_list">Your couples list</string>
    <string name="toolbar_select_user">Select user</string>
    <string name="label_start_title" translatable="false">IWMY (Speed Dating)</string>
    <string name="label_email">Email: </string>
    <string name="label_username">Username: </string>
    <string name="label_password">Password: </string>
    <string name="label_name_and_surname">Name, surname: </string>
    <string name="label_birth_date">Birth date: </string>
    <string name="label_phone">Phone number: </string>
    <string name="label_gender">Gender: </string>
    <string name="label_gender_male">Male</string>
    <string name="label_gender_female">Female</string>
    <string name="label_event_organizer_and_place">Organizer and place: </string>
    <string name="label_event_address">Street address: </string>
    <string name="label_event_time">Time: </string>
    <string name="label_event_places">Number of attenders: </string>
    <string name="label_event_cost">Cost: </string>
    <string name="label_event_min_allowed_age">Min age of participants: </string>
    <string name="label_event_max_allowed_age">Max age of participants: </string>
    <string name="label_event_description">Description: </string>
    <string name="label_you_will_be_contacted">Thank you. You will be contacted soon</string>
    <string name="label_event_organizer">Organizer: </string>
    <string name="label_user_name">Name, </string>
    <string name="label_user_age">Age, </string>
    <string name="label_user_location">Location</string>
    <string name="label_number">#</string>
    <string name="label_selection" translatable="false">+/-</string>
    <string name="label_comment">Comment</string>
    <string name="label_rating_username">Username</string>
    <string name="label_wait_for_result">Please wait for results</string>
    <string name="label_calculating">Calculating</string>
    <string name="label_finishing">Finishing</string>
    <string name="label_progress" translatable="false">0/0</string>
    <string name="label_questionnaires">Questionnaires</string>
    <string name="label_orientation">Orientation: </string>
    <string name="label_appearance">Appearance: </string>
    <string name="label_goal">Goal: </string>
    <string name="label_affairs">Affairs: </string>
    <string name="label_children">Children: </string>
    <string name="label_height">Height: </string>
    <string name="label_weight">Weight: </string>
    <string name="label_attitude_to_smoking">Attitude to smoking: </string>
    <string name="label_attitude_to_alcohol">Attitude to alcohol: </string>
    <string name="label_event_place">Place: </string>
    <string name="label_event_city">City: </string>
    <string name="label_event_country">Country: </string>
    <string name="label_event_date">Date: </string>
    <string name="label_out_of" translatable="false">/</string>
    <string name="label_delete">Delete</string>
    <string name="label_delete_this_event">Delete this event?\n</string>
    <string name="label_delete_this_event_from_yours">Delete this event from your events?\n</string>
    <string name="label_remove_this_user_from_event">Remove this user from event?\n</string>
    <string name="label_select_date">Select date</string>
    <string name="label_select_time">Select time</string>
    <string name="label_waiting_for_organizer">Waiting for organizer</string>
    <string name="label_max_ratings">Max ratings per user:</string>
    <string name="label_new_couple_list_one">We have a winner! Congratulations to the couple!</string>
    <string name="label_new_couple_list_many">Excellent results! We have several happy couples!</string>
    <string name="label_new_couple_list_empty">There are no matching couples, but there was a good time!</string>
    <string name="label_old_couple_list_one">They found each other! Congratulations to the couple!</string>
    <string name="label_old_couple_list_many">An incredible dating! There are several couples!</string>
    <string name="label_old_couple_list_empty">Thank you for participation! We are glad to see you again soon!</string>
    <string name="label_couple">Couple:</string>
    <string name="label_event_is_old">This is an old event</string>
    <string name="label_enter_completely">Enter email, name or username completely to see all results</string>
    <string name="label_photo">Photo</string>
    <string name="label_send_couple_emails">Send emails to matching couples</string>
    <string name="label_empty" translatable="false">-</string>
    <string name="button_login">Login</string>
    <string name="button_forgot_password">Forgot password</string>
    <string name="button_register">Register</string>
    <string name="button_choose_photo">Choose photo</string>
    <string name="button_remove_photo">Remove this photo</string>
    <string name="button_apply">Apply</string>
    <string name="button_enter">Enter</string>
    <string name="button_attend">Attend</string>
    <string name="button_start">Start</string>
    <string name="button_ok">OK</string>
    <string name="button_for_organizers">For organizers</string>
    <string name="button_add_event">Add event</string>
    <string name="button_edit_start">Edit/Start</string>
    <string name="button_participants_list">Participants list</string>
    <string name="button_add_participant">Add new</string>
    <string name="button_add_questionnaire">Add new</string>
    <string name="button_send_questionnaires">Send questionnaires</string>
    <string name="button_send">Send</string>
    <string name="button_send_results">Send results</string>
    <string name="button_logout">Logout</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit_my_profile">Edit my profile</string>
    <string name="button_allow_users_send_ratings">Allow users to send ratings</string>
    <string name="button_add">Add</string>
    <string name="button_add_existing">Add existing</string>
    <string name="tab_events_current">Current</string>
    <string name="tab_events_past">Past</string>
    <string name="tab_guys">Guys</string>
    <string name="tab_ladies">Ladies</string>
    <string name="message_registered">Thank you for registering!</string>
    <string name="message_connection_error">
        Connection error! Please check your internet connection and try again.
    </string>
    <string name="message_authorization_error">
        You are not authorized. Please try to logout and login again.
    </string>
    <string name="message_access_error">
        You do not have permission to proceed with this action.
    </string>
    <string name="message_version_error">
        This action is no longer supported. Please update your application.
    </string>
    <string name="message_other_post_error">
        This action resulted in an error. Please try again later.
    </string>
    <string name="message_photo_getting_error">Error. Cannot get a photo.</string>
    <string name="message_user_exists">User already exists. Please enter other email or username</string>
    <string name="message_event_exists">
        You already created an event at this place or time.
        Please enter other place or time, or edit/delete the older event.
    </string>
    <string name="message_participant_added">Participant added</string>
    <string name="message_event_added">Event added</string>
    <string name="message_input_error">please check this field.</string>
    <string name="message_inputs_error">Please check your inputs and try again.</string>
    <string name="message_questionnaires_sent">Questionnaires sent</string>
    <string name="message_select_equal">Please select equal number of guys and ladies.</string>
    <string name="message_couples_sent">Couples sent</string>
    <string name="message_no_user_wrong_password">No such user or incorrect password</string>
    <string name="message_you_cannot_add_more_ratings">You cannot add more ratings</string>
    <string name="message_you_cannot_add_ratings_user">You cannot add ratings for this user</string>
    <string name="message_tap_rotate_photo">Tap photo if you want to rotate it</string>
    <string name="message_password_reset_suspicious">
        No such user, or too many attempts to remind password. Please contact us by email.
    </string>
    <string name="message_password_reset_sent">Your password is sent to your email.</string>
    <string name="hint_email_or_username">Email or username</string>
    <string name="hint_password">Password</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your username</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="hint_enter_name_and_surname">Enter your name and surname</string>
    <string name="hint_enter_phone">Enter your phone number</string>
    <string name="hint_enter_organization">Enter your organization name</string>
    <string name="hint_enter_website">Enter your website address</string>
    <string name="hint_enter_participant_email">Enter participant email</string>
    <string name="hint_search_email_name_username">Search email/name/username</string>
    <string name="menu_my_events">My events</string>
    <string name="menu_all_events">All events</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_from_camera">From camera</string>
    <string name="menu_from_gallery">From gallery</string>
    <string name="mail_subject_organizer_registering">Organizer registering request</string>
    <string name="mail_subject_organizer_confirmation">Your IWMY Speed Dating account was confirmed</string>
    <string name="mail_subject_organizer_event_successful">The dating was successful</string>
    <string name="mail_subject_user_you_found">You found each other!</string>
    <string name="mail_subject_user_thank_you">Thank you for participating in the speed dating!</string>
    <string name="mail_subject_password_reset">IWMY Speed Dating - password reminding</string>
    <string name="mail_text_organizer_confirmation">
        Your request for registering your IWMY Speed Dating account as an organizer was satisfied!
        Now you can create and edit events using your device.
        We hope our app will become an effective discovery for you!
        If you have any questions regarding the app or collaboration,
        feel free to write an email to us, we will answer shortly:
        \nCONTACTS_SPEED_DATING
        \n
        \nBest regards,
        \nThe IWMY team
    </string>
</resources>