<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/accent_color"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent">

        <include layout="@layout/image_view_toolbar_logo"/>

        <TextView
            android:text="@string/toolbar_registering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/toolbar_text_size"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>

    <include layout="@layout/progress_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_email"
                android:maxLength="@integer/edit_text_max_length"
                android:inputType="textEmailAddress" />

            <TextView
                android:text="@string/label_username"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_username"
                android:hint="@string/hint_enter_username"
                android:inputType="text"
                android:maxLength="@integer/edit_text_max_length"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_password"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_password"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword"
                android:maxLength="@integer/edit_text_max_length"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_name_and_surname"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_name_and_surname"
                android:hint="@string/hint_enter_name_and_surname"
                android:inputType="text"
                android:maxLength="@integer/edit_text_max_length"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_phone"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_phone"
                android:hint="@string/hint_enter_phone"
                android:inputType="phone"
                android:maxLength="@integer/edit_text_max_length"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_organization"
                android:hint="@string/hint_enter_organization"
                android:inputType="text"
                android:maxLength="@integer/edit_text_max_length"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_website"
                android:hint="@string/hint_enter_website"
                android:inputType="text"
                android:maxLength="@integer/edit_text_max_length"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_apply"
                android:text="@string/button_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
