<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageButton
            android:id="@+id/button_options"
            android:src="@drawable/menu"
            android:background="@android:color/transparent"
            android:paddingRight="@dimen/margin"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_new_participant"
            android:text="@string/toolbar_new_participant"
            android:textSize="@dimen/toolbar_text_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_settings"
                android:src="@drawable/settings"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:paddingRight="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:paddingBottom="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:text="@string/label_username"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_username"
                android:hint="@string/hint_enter_username"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_password"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_password"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_name_and_surname"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_name_and_surname"
                android:hint="@string/hint_enter_name_and_surname"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_phone"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_phone"
                android:hint="@string/hint_enter_phone"
                android:inputType="phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_birth_date"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_select_date"
                android:text="@string/label_select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_birth_date"
                android:text="@string/label_empty"
                android:textSize="@dimen/label_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_gender"
                android:textSize="@dimen/label_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:text="@string/label_gender_male"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:text="@string/label_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <Button
                android:id="@+id/button_register"
                android:text="@string/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
