<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/label_name_and_surname"
        android:textSize="@dimen/label_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_name_and_surname"
        android:hint="@string/hint_enter_name_and_surname"
        android:inputType="text"
        android:maxLength="@integer/edit_text_max_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/label_phone"
        android:textSize="@dimen/label_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_phone"
        android:hint="@string/hint_enter_phone"
        android:inputType="phone"
        android:maxLength="@integer/edit_text_max_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/label_birth_date"
        android:textSize="@dimen/label_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_select_date"
        android:text="@string/label_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_birth_date"
        android:text="@string/label_empty"
        android:textSize="@dimen/label_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/label_gender"
        android:textSize="@dimen/label_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/gender_male"
            android:text="@string/label_gender_male"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/gender_female"
            android:text="@string/label_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:text="@string/label_city"
        android:textSize="@dimen/label_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_city"
        android:inputType="text"
        android:maxLength="@integer/edit_text_max_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/label_country"
        android:textSize="@dimen/label_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_country"
        android:inputType="text"
        android:maxLength="@integer/edit_text_max_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/linear_layout_edit_photo"/>

</LinearLayout>
