<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/main_color"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/accent_color"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent">

        <!-- todo include layout="@layout/image_button_toolbar_options"/-->

        <TextView
            android:id="@+id/label_couple"
            android:text="@string/toolbar_couple"
            android:textSize="@dimen/toolbar_text_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- todo include layout="@layout/image_button_toolbar_ok"/-->

                <include layout="@layout/image_button_toolbar_settings"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:src="@drawable/no_photo_man"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_name_and_surname"
                android:text="@string/label_name_and_surname"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_email"
                android:text="@string/label_email"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_phone"
                android:text="@string/label_phone"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_gender"
                android:text="@string/label_gender"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_birth_date"
                android:text="@string/label_birth_date"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_orientation"
                android:text="@string/label_orientation"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_appearance"
                android:text="@string/label_appearance"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_goal"
                android:text="@string/label_goal"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_affairs"
                android:text="@string/label_affairs"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_children"
                android:text="@string/label_children"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_height"
                android:text="@string/label_height"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_weight"
                android:text="@string/label_weight"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_attitude_to_smoking"
                android:text="@string/label_attitude_to_smoking"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_attitude_to_alcohol"
                android:text="@string/label_attitude_to_alcohol"
                android:textSize="@dimen/label_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
