<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:text="@string/label_username"
        android:textSize="@dimen/label_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_username"
        android:hint="@string/hint_enter_username"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
